[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/cangaceiro_colorido.png" type="Texture" id=1]
[ext_resource path="res://assets/cenario_batalha.png" type="Texture" id=2]
[ext_resource path="res://cenas_universais/jogador.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/cangaceiro_boss_dark.png" type="Texture" id=4]
[ext_resource path="res://cutscenes/bossCangaceiro_final.gd" type="Script" id=5]
[ext_resource path="res://assets/cenario_farol_de_ponta_verde_sem_farol.png" type="Texture" id=6]
[ext_resource path="res://assets/Retro Gaming.ttf" type="DynamicFontData" id=7]

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 0, 56, 64, 56 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 0, 112, 64, 56 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 0, 168, 64, 56 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 32.0
height = 54.0

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 0, 168, 64, 56 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 0, 224, 64, 56 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 0, 280, 64, 56 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 0, 336, 64, 56 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 0, 392, 64, 56 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 56 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 0, 56, 64, 56 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 0, 112, 64, 56 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "dano",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
} ]

[sub_resource type="CapsuleShape2D" id=24]
radius = 32.0
height = 54.0

[sub_resource type="DynamicFont" id=29]
size = 14
font_data = ExtResource( 7 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 328.0
color = Color( 0.443137, 0.658824, 0.937255, 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 256, 164 )
scale = Vector2( 2, 1.92941 )
texture = ExtResource( 6 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 256.5, 164.125 )
scale = Vector2( 3.99219, 3.85588 )
texture = ExtResource( 2 )

[node name="boss_colorido" type="StaticBody2D" parent="."]
position = Vector2( 79, 27 )
__meta__ = {
"_edit_group_": true
}

[node name="boss" type="AnimatedSprite" parent="boss_colorido"]
position = Vector2( 298, 116 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 5 )
speed_scale = 0.3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="boss_colorido"]
position = Vector2( 318, 121 )
shape = SubResource( 6 )

[node name="boss_pretoebranco" type="StaticBody2D" parent="."]
position = Vector2( 79, 27 )
__meta__ = {
"_edit_group_": true
}

[node name="boss" type="AnimatedSprite" parent="boss_pretoebranco"]
position = Vector2( 298, 116 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 23 )
animation = "idle"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="boss_pretoebranco"]
position = Vector2( 318, 121 )
shape = SubResource( 24 )

[node name="jogador" parent="." instance=ExtResource( 3 )]
position = Vector2( 103, 193 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="falas_cangaceiro" type="Label" parent="."]
margin_left = 12.0
margin_top = 60.0
margin_right = 369.0
margin_bottom = 96.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 29 )
align = 2
valign = 1
